---
source: compiler-core/src/javascript/tests/prelude.rs
expression: "import rakun\npub fn go() { rakun.Error(1) }\n"
---
import * as $rakun from "../rakun.mjs";

export function go() {
  return new $rakun.Error(1);
}
